// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IonIcon match snapshot for alias icon 1`] = `
<div>
  <ion-icon
    name="analytics"
  />
</div>
`;

exports[`IonIcon match snapshot for basic icon 1`] = `
<div>
  <ion-icon
    name="home"
  />
</div>
`;

exports[`IonIcon match snapshot for custom icon 1`] = `
<div>
  <ion-icon
    src="/images/home2.svg"
  />
</div>
`;
